--- a/AntonStockApp/res/values/strings_add_pm.xml
+++ b/AntonStockApp/res/values/strings_add_pm.xml
@@ -11,6 +11,7 @@
 	<string name="add_pm_prod_mp_unidad">m2</string>
 	<string name="add_pm_prod_bacha_unidad">Unidad</string>
 	<string name="add_pm_compra">Orden de Compra</string>
+	<string name="action_date_pm">Recepcion</string>
 	
     
 
