--- a/AntonStockApp/res/values/strings_product.xml
+++ b/AntonStockApp/res/values/strings_product.xml
@@ -43,6 +43,7 @@
     <string name="title_menu_services">Servicios</string>    
     <string name="title_clientes">Clientes</string>
     <string name="title_suppliers">Proveedores</string>
+    <string name="title_works">Obras</string>
     <string name="title_add_products">Ingresar Productos</string>
     <string name="title_sub_products">Restar Productos</string>    
                     
