--- a/AntonStockApp/res/values-sw600dp/dimens.xml
+++ b/AntonStockApp/res/values-sw600dp/dimens.xml
@@ -34,14 +34,15 @@
 	
 	<dimen name="partner_name_text_size">30sp</dimen>  
 	<dimen name="partner_image_w">150dp</dimen>  
-	<dimen name="partner_image_h">150dp</dimen>  
+	<dimen name="partner_image_h">150dp</dimen>  	
 	<dimen name="partner_text_size">19sp</dimen>  	
 
 	<dimen name="product_available_height">150dp</dimen>  	
 
 	<dimen name="pm_row_height">40dp</dimen>  	
 	<dimen name="pm_title_text_size">25sp</dimen>
-	<dimen name="pm_input_height">40dp</dimen>  	
+	<dimen name="pm_input_height">40dp</dimen>  
+	<dimen name="pm_input_width">150dp</dimen>	
 	<dimen name="pm_margin_sep">5dp</dimen>  
 	<dimen name="pm_spinner_text_size">10sp</dimen>
 	
@@ -49,11 +50,18 @@
 	<dimen name="oe_margin_sep">5dp</dimen>  
 	<dimen name="oe_row_height">40dp</dimen>  	
 	<dimen name="oe_input_height">40dp</dimen>  	
+	<dimen name="oe_input_width">150dp</dimen>	
 		
 	<dimen name="popup_input_height">40dp</dimen>  	
 		
+	<dimen name="emploee_image_w">50dp</dimen>  
+	<dimen name="emploee_image_h">50dp</dimen>  		
+	
+	<dimen name="partner_list_image_w">70dp</dimen>  
+	<dimen name="partner_list_image_h">70dp</dimen>
+	<dimen name="partner_list_margin">2dp</dimen>  			
+	<dimen name="partner_list_text_size">16dp</dimen>
+	<dimen name="partner_list_data_size">12dp</dimen>
+	
 		
-	
-			
-	
 </resources>
